--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </div>
         </div>
         <div id="section-2" class="section-2">
+            <div class="section-background-2"></div>
             <div class="container">
                 <div class="section-2-title element">
                     <span>Thương hiệu chống nắng
@@ -55,6 +56,7 @@
             </div>
         </div>
         <div id="section-3" class="section-3">
+            <div class="section-background-3"></div>
             <div class="container">
                 <div class="title-section-3">
                     <span>Gel chống nắng
@@ -264,6 +266,7 @@
             </div>
         </div>
         <div id="section-7" class="section-7">
+            <div class="section-background-7"></div>
             <div class="container">
                 <div id="carouselExampleControls" class="carousel slide item-slide" data-ride="carousel">
                     <div class="carousel-inner">
